--- a/index.html
+++ b/index.html
@@ -13,31 +13,39 @@
 	<body>
 		<section id="wrapper">
 			<header>
-				<section class="layout">
-					<section class="contacts">
-						<div class="logo">
-							<h2>WB <span>group</span></h2>
-						</div>
-						<div class="phone-mail">
-							<p>
-								<img src="images/icon_phone.png">
-								<a href="tel:+324587965214"> +324587965214</a>
-							</p>
-							<p>
-								<img src="images/icon_mail.png">
-								<a href="mailto:mail@gmail.com"> mail@gmail.com</a>
-							</p>
-						</div>
+				<img src="./images/decor-yellow.png" class="decor decor-1">
+				<img src="./images/decor-yellow.png" class="decor decor-2">
+				<img src="./images/decor-yellow.png" class="decor decor-3">
+				<img src="./images/decor-yellow.png" class="decor decor-4">
+				<img src="./images/castle.png" class="decor castle">
+				<div class="white_block">
+					<section class="layout">
+						<img src="./images/ship.png" class="decor ship">
+						<section class="contacts">
+							<div class="logo">
+								<h2>WB <span>group</span></h2>
+							</div>
+							<div class="phone-mail">
+								<p>						
+									<svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="phone" class="svg-inline--fa fa-phone fa-w-16" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path fill="currentColor" d="M493.4 24.6l-104-24c-11.3-2.6-22.9 3.3-27.5 13.9l-48 112c-4.2 9.8-1.4 21.3 6.9 28l60.6 49.6c-36 76.7-98.9 140.5-177.2 177.2l-49.6-60.6c-6.8-8.3-18.2-11.1-28-6.9l-112 48C3.9 366.5-2 378.1.6 389.4l24 104C27.1 504.2 36.7 512 48 512c256.1 0 464-207.5 464-464 0-11.2-7.7-20.9-18.6-23.4z"></path></svg>
+									<a href="tel:+324587965214"> +324587965214</a>
+								</p>
+								<p>						
+									<svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="envelope" class="svg-inline--fa fa-envelope fa-w-16" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path fill="currentColor" d="M502.3 190.8c3.9-3.1 9.7-.2 9.7 4.7V400c0 26.5-21.5 48-48 48H48c-26.5 0-48-21.5-48-48V195.6c0-5 5.7-7.8 9.7-4.7 22.4 17.4 52.1 39.5 154.1 113.6 21.1 15.4 56.7 47.8 92.2 47.6 35.7.3 72-32.8 92.3-47.6 102-74.1 131.6-96.3 154-113.7zM256 320c23.2.4 56.6-29.2 73.4-41.4 132.7-96.3 142.8-104.7 173.4-128.7 5.8-4.5 9.2-11.5 9.2-18.9v-19c0-26.5-21.5-48-48-48H48C21.5 64 0 85.5 0 112v19c0 7.4 3.4 14.3 9.2 18.9 30.6 23.9 40.7 32.4 173.4 128.7 16.8 12.2 50.2 41.8 73.4 41.4z"></path></svg>
+									<a href="mailto:mail@gmail.com"> mail@gmail.com</a>
+								</p>
+							</div>
+						</section>
+						<section class="main-info">
+							<h1>Юридические услуги<br>в Польше</h1>
+							<ul>
+								<li><span>для тех, кто хочет </span> <a href="#work">начать работать</a></li>
+								<li><span>для тех, кто хочет </span><a href="#business">начать свой бизнес</a></li>
+								<li><span>для тех, кто хочет </span><a href="#vng-pmg">получить ВНЖ/ПМЖ</a></li>
+							</ul>
+						</section>
 					</section>
-					<section class="main-info">
-						<h1>Юридические услуги<br>в Польше</h1>
-						<ul>
-							<li><span>для тех, кто хочет </span> <a href="#work">начать работать</a></li>
-							<li><span>для тех, кто хочет </span><a href="#business">начать свой бизнес</a></li>
-							<li><span>для тех, кто хочет </span><a href="#vng-pmg">получить ВНЖ/ПМЖ</a></li>
-						</ul>
-					</section>
-				</section>
+				</div>
 			</header>
 			<main>
 				<section id="company">
@@ -45,6 +53,7 @@
 						<figure>
 							<figcaption>О компании</figcaption>
 							<div>
+								<iframe src="https://www.youtube.com/embed/lkQ0LDx9jHs" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 							</div>
 						</figure>
 						<section class ="text">
@@ -55,12 +64,12 @@
 							<p>Мы предлагаем:</p>
 							<ul>
 								<li>подробные ответы на вопросы клиента в течение 24 часов</li>
-								<li>Реальные рыночные цены без переплат</li>
+								<li>РЕАЛЬНЫЕ рыночные цены без переплат</li>
 								<li>высочайший уровень дипломированных специалистов с опытом работы не менее 10 лет</li>
 							</ul>
 						</section>
-						<img src="./images/che-1.png">
-					</section>			
+					</section>
+					<img src="./images/decor-grey.png">			
 				</section>
 				<section id="vng-pmg">
 					<section class="layout_main">
@@ -77,7 +86,9 @@
 								<li>другая юридическая и информационная поддержка</li>
 							</ul>
 						</section>
-						<div></div>
+						<div>
+							<iframe src="https://www.youtube.com/embed/EtH9Yllzjcc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+						</div>
 					</section>
 				</section>
 				<section id="work">
@@ -85,6 +96,7 @@
 						<figure>
 							<figcaption>Для тех, кто едет работать</figcaption>
 							<div>
+								<iframe src="https://www.youtube.com/embed/BIeiDI2K3J0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 							</div>
 						</figure>
 						<section class="text">
@@ -108,8 +120,8 @@
 								<span>Так и возможность заказать отдельно юридическую консультацию или помощь по интересующему Вас вопросу.</span>
 							</p>
 						</section>
-						<img src="./images/che.png">
 					</section>
+					<img src="./images/decor-grey.png">
 				</section>
 				<section id="business">
 					<section class="layout_main">
@@ -130,9 +142,11 @@
 								<li>другая юридическая и информационная поддержка</li>
 							</ul>
 						</section>
-						<img src="./images/che-2.png">
-						<div></div>
+						<div>
+							<iframe src="https://www.youtube.com/embed/YJ3pihUm7Rs" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+						</div>
 					</section>
+					<img src="./images/decor-grey.png">
 				</section>			
 				<section class="houses">
 					<img src="images/houses.png">
@@ -143,12 +157,12 @@
 					<section class="phone-mail_fr">
 						<h3>Контакты</h3>
 						<div>
-							<p>
-								<img src="images/icon_phone_fr.png">
+							<p>					
+								<svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="phone" class="svg-inline--fa fa-phone fa-w-16" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path d="M493.4 24.6l-104-24c-11.3-2.6-22.9 3.3-27.5 13.9l-48 112c-4.2 9.8-1.4 21.3 6.9 28l60.6 49.6c-36 76.7-98.9 140.5-177.2 177.2l-49.6-60.6c-6.8-8.3-18.2-11.1-28-6.9l-112 48C3.9 366.5-2 378.1.6 389.4l24 104C27.1 504.2 36.7 512 48 512c256.1 0 464-207.5 464-464 0-11.2-7.7-20.9-18.6-23.4z"></path></svg>
 								<a href="tel:+48 796 930 336"> +48 796 930 336</a>
 							</p>
-							<p>
-								<img src="images/icon_mail_fr.png">
+							<p>						
+								<svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="envelope" class="svg-inline--fa fa-envelope fa-w-16" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path d="M502.3 190.8c3.9-3.1 9.7-.2 9.7 4.7V400c0 26.5-21.5 48-48 48H48c-26.5 0-48-21.5-48-48V195.6c0-5 5.7-7.8 9.7-4.7 22.4 17.4 52.1 39.5 154.1 113.6 21.1 15.4 56.7 47.8 92.2 47.6 35.7.3 72-32.8 92.3-47.6 102-74.1 131.6-96.3 154-113.7zM256 320c23.2.4 56.6-29.2 73.4-41.4 132.7-96.3 142.8-104.7 173.4-128.7 5.8-4.5 9.2-11.5 9.2-18.9v-19c0-26.5-21.5-48-48-48H48C21.5 64 0 85.5 0 112v19c0 7.4 3.4 14.3 9.2 18.9 30.6 23.9 40.7 32.4 173.4 128.7 16.8 12.2 50.2 41.8 73.4 41.4z"></path></svg>
 								<a href="mailto:mail@gmail.com"> mail@gmail.com</a>
 							</p>
 						</div>
@@ -172,6 +186,8 @@
 						</ul>
 					</section>
 				</section>
+				<img src="./images/decor-black.png" class="decor decor-1">
+				<img src="./images/decor-black.png" class="decor decor-2">
 			</footer>
 			<a href="#" class="scrollup"></a>
 		</section>	
