--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
 							<div class="phone-mail">
 								<p>						
 									<svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="phone" class="svg-inline--fa fa-phone fa-w-16" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path fill="currentColor" d="M493.4 24.6l-104-24c-11.3-2.6-22.9 3.3-27.5 13.9l-48 112c-4.2 9.8-1.4 21.3 6.9 28l60.6 49.6c-36 76.7-98.9 140.5-177.2 177.2l-49.6-60.6c-6.8-8.3-18.2-11.1-28-6.9l-112 48C3.9 366.5-2 378.1.6 389.4l24 104C27.1 504.2 36.7 512 48 512c256.1 0 464-207.5 464-464 0-11.2-7.7-20.9-18.6-23.4z"></path></svg>
-									<a href="tel:+324587965214"> +324587965214</a>
+									<a href="tel:+324587965214"> +48 796 930 336</a>
 								</p>
 								<p>						
 									<svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="envelope" class="svg-inline--fa fa-envelope fa-w-16" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path fill="currentColor" d="M502.3 190.8c3.9-3.1 9.7-.2 9.7 4.7V400c0 26.5-21.5 48-48 48H48c-26.5 0-48-21.5-48-48V195.6c0-5 5.7-7.8 9.7-4.7 22.4 17.4 52.1 39.5 154.1 113.6 21.1 15.4 56.7 47.8 92.2 47.6 35.7.3 72-32.8 92.3-47.6 102-74.1 131.6-96.3 154-113.7zM256 320c23.2.4 56.6-29.2 73.4-41.4 132.7-96.3 142.8-104.7 173.4-128.7 5.8-4.5 9.2-11.5 9.2-18.9v-19c0-26.5-21.5-48-48-48H48C21.5 64 0 85.5 0 112v19c0 7.4 3.4 14.3 9.2 18.9 30.6 23.9 40.7 32.4 173.4 128.7 16.8 12.2 50.2 41.8 73.4 41.4z"></path></svg>
-									<a href="mailto:mail@gmail.com"> mail@gmail.com</a>
+									<a href="mailto:mail@gmail.com">wb.europa@gmail.com</a>
 								</p>
 							</div>
 						</section>
@@ -53,7 +53,7 @@
 						<figure>
 							<figcaption>О компании</figcaption>
 							<div>
-								<iframe src="https://www.youtube.com/embed/lkQ0LDx9jHs" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+								<iframe src="https://www.youtube.com/embed/peNiszxcHsk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 							</div>
 						</figure>
 						<section class ="text">
@@ -77,7 +77,7 @@
 							<h3>Для тех, кто хочет <br>получить ВНЖ/ПМЖ</h3>
 							<p>Помощь и полное сопровождение в получении <span>ВНЖ/ПМЖ/карты поляка/паспорта</span>:</p>
 							<ul>
-								<li>подробная консультация и информирование о Ваших правах и обязонностях в Польше + письменная памятка о самых важных моментах</li>
+								<li>подробная консультация и информирование о Ваших правах и обязонностях в Польше</li>
 								<li>помощь в поиске жилья</li>
 								<li>помощь в получении временной прописки</li>
 								<li>помощь в получении номера налогоплательщика</li>
@@ -87,7 +87,7 @@
 							</ul>
 						</section>
 						<div>
-							<iframe src="https://www.youtube.com/embed/EtH9Yllzjcc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+							<iframe src="https://www.youtube.com/embed/NjA7ctFbO28" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 						</div>
 					</section>
 				</section>
@@ -96,7 +96,7 @@
 						<figure>
 							<figcaption>Для тех, кто едет работать</figcaption>
 							<div>
-								<iframe src="https://www.youtube.com/embed/BIeiDI2K3J0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+								<iframe src="https://www.youtube.com/embed/SvCrZLqwJgc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 							</div>
 						</figure>
 						<section class="text">
@@ -108,7 +108,7 @@
 								<li>проверка работодателя до Вашего выезда в Польшу</li>
 								<li>встреча и сопровождение на место работы</li>
 								<li>получение ВНЖ/ПМЖ/карты поляка/паспорта</li>
-								<li>подробная консультация и информирование о Ваших правах и обязанностях в Польше + письменная памятка о самых важных моментах</li>
+								<li>подробная консультация и информирование о Ваших правах и обязанностях в Польше</li>
 								<li>помощь в подписании трудового договора</li>
 								<li>помощь в поиске жилья</li>
 								<li>помощь в получении временной прописки</li>
@@ -117,7 +117,8 @@
 								<li>другая юридическая и информационная поддержка</li>
 							</ul>
 							<p>
-								<span>Так и возможность заказать отдельно юридическую консультацию или помощь по интересующему Вас вопросу.</span>
+								<span>
+								Как и возможность заказать отдельно юридическую консультацию или помощь по интересующему Вас вопросу.</span>
 							</p>
 						</section>
 					</section>
@@ -133,7 +134,7 @@
 								<li>возможность дистанционного открытия фирмы</li>
 								<li>встреча, сопровождение, консультации по текущим вопросам</li>
 								<li>поиск бизнес-партнеров</li>
-								<li>подробная консультация и информирование о Ваших правах и обязанностях в Польше + письменная памятка о самых важных моментах</li>
+								<li>подробная консультация и информирование о Ваших правах и обязанностях в Польше</li>
 								<li>бухгалтерское сопровождение</li>
 								<li>услуга виртуального офиса</li>
 								<li>помощь в покупке готовой фирмы</li>
@@ -143,7 +144,7 @@
 							</ul>
 						</section>
 						<div>
-							<iframe src="https://www.youtube.com/embed/YJ3pihUm7Rs" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+							<iframe src="https://www.youtube.com/embed/Uo9YzS06RcQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 						</div>
 					</section>
 					<img src="./images/decor-grey.png">
@@ -163,7 +164,7 @@
 							</p>
 							<p>						
 								<svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="envelope" class="svg-inline--fa fa-envelope fa-w-16" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path d="M502.3 190.8c3.9-3.1 9.7-.2 9.7 4.7V400c0 26.5-21.5 48-48 48H48c-26.5 0-48-21.5-48-48V195.6c0-5 5.7-7.8 9.7-4.7 22.4 17.4 52.1 39.5 154.1 113.6 21.1 15.4 56.7 47.8 92.2 47.6 35.7.3 72-32.8 92.3-47.6 102-74.1 131.6-96.3 154-113.7zM256 320c23.2.4 56.6-29.2 73.4-41.4 132.7-96.3 142.8-104.7 173.4-128.7 5.8-4.5 9.2-11.5 9.2-18.9v-19c0-26.5-21.5-48-48-48H48C21.5 64 0 85.5 0 112v19c0 7.4 3.4 14.3 9.2 18.9 30.6 23.9 40.7 32.4 173.4 128.7 16.8 12.2 50.2 41.8 73.4 41.4z"></path></svg>
-								<a href="mailto:mail@gmail.com"> mail@gmail.com</a>
+								<a href="mailto:mail@gmail.com"> wb.europa@gmail.com</a>
 							</p>
 						</div>
 					</section>
